fixed a overflow when inline image is too long

--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -47,7 +47,10 @@
             img.inline-image {
                 min-height: 1.5em;
                 width: auto;
+                max-width: 100%;
                 vertical-align: text-bottom;
+                aspect-ratio: attr(width) / attr(height);
+                object-fit: contain;
             }
         }
 
